[gd_scene load_steps=3 format=3 uid="uid://t6luoyca32d2"]

[ext_resource type="Script" path="res://Scripts/UI/coin_result.gd" id="1_qtulm"]
[ext_resource type="Theme" uid="uid://bond37gfa0v24" path="res://Styles/style.tres" id="3_rjaqp"]

[node name="CoinResult" type="Node2D"]
texture_filter = 1
script = ExtResource("1_qtulm")

[node name="RichTextLabel1" type="RichTextLabel" parent="."]
offset_left = 9.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 46.0
theme = ExtResource("3_rjaqp")
theme_override_font_sizes/normal_font_size = 20
text = "1
"

[node name="RichTextLabel0" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 30.0
offset_right = 48.0
offset_bottom = 70.0
theme = ExtResource("3_rjaqp")
theme_override_font_sizes/normal_font_size = 20
text = "0
"

[node name="IconSprites" type="Node2D" parent="."]
position = Vector2(30, 0)

[node name="Pos1" type="Node2D" parent="IconSprites"]
position = Vector2(0, 10)

[node name="Pos0" type="Node2D" parent="IconSprites"]
position = Vector2(0, 34)
